--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Modern React Templates & Components for building landing pages and UIs - Treact</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <section id="landing">
-    <nav>
-      <div class="nav__containter">
-        <div class="row">
-          <img class="logo" src="./assets/logo.svg" alt="">
-          <div class="logo__right">Treact</div>
-          <ul class="nav__links">
-            <il><a href="" class="nav__link">About</a></il>
-            <il><a href="" class="nav__link">Blog</a></il>
-            <il><a href="" class="nav__link">Pricing</a></il>
-            <il><a href="" class="nav__link">Contact Us</a></il>
-            <il><a href="" class="nav__link">Login</a></il>
-            <il><a href="" class="nav__link">Sign Up</a></il>
-          </ul>
-        </div>
+  <div id="root">
+    <div class="app">
+      <div>
+        <section style="transform: none;">
+        <header class="light__header">
+          <nav class="nav__container">
+            <a href="#" class="nav__link--logo">
+              <img  class="logo" src="./assets/logo.svg">
+              Treact
+            </a>
+            <div class="nav__links">
+              <ul>
+                <il><a href="#" class="nav__link">About</a></il>
+                <il><a href="#" class="nav__link">Blog</a></il>
+                <il><a href="#" class="nav__link">Pricing</a></il>
+                <il><a href="#" class="nav__link">Contacts</a></il>
+                <il><a href="#" class="nav__link">Login</a></il>
+                <il><a href="#" class="nav__link--primary">Sign Up</a></il>
+              </ul>
+            </div>
+          </nav>
+        </header>
+        </section>
       </div>
-    </nav>
-  </section>
-  
-  <section>
-    <nav>
-      <div class="container__main">
-        <div class="row">
-          <h1>Beautiful React Templates for you.</h1>
-        <p>Our templates are easy to setup, understand and customize. Fully modular components with variety of pages and components</p>
-        </div>
-      </div>
-    </nav>
-  </section>
+    </div>
+  </div>
 </body>
 </html>
