Adding more to the landing page

--- a/index.html
+++ b/index.html
@@ -13,26 +13,47 @@
   <div id="root">
     <div class="app">
       <div>
-        <section style="transform: none;">
-        <header class="light__header">
-          <nav class="nav__container">
-            <a href="#" class="nav__link--logo">
-              <img  class="logo" src="./assets/logo.svg">
-              Treact
-            </a>
-            <div class="nav__links">
-              <ul>
-                <il><a href="#" class="nav__link">About</a></il>
+        <section>
+          <header class="light__header">
+            <div class="nav__container">
+              <a href="#" class="nav__link--logo">
+                <img class="logo" src="./assets/logo.svg">
+                Treact
+              </a>
+              <div class="nav__links">
+                <ul>
+                  <il><a href="#" class="nav__link">About</a></il>
                 <il><a href="#" class="nav__link">Blog</a></il>
                 <il><a href="#" class="nav__link">Pricing</a></il>
                 <il><a href="#" class="nav__link">Contacts</a></il>
                 <il><a href="#" class="nav__link">Login</a></il>
                 <il><a href="#" class="nav__link--primary">Sign Up</a></il>
-              </ul>
+                </ul>
+              </div>
             </div>
-          </nav>
-        </header>
+          </header>
         </section>
+      </div>
+      <div class="two--column__container">
+        <div class="two--column__input">
+          <div class="two--column__left">
+            <h1>
+              Beautiful React Templates <span class="purple">for you.</span>
+            </h1>
+            <p class="left--column__para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+            <input type="text" placeholder="Your E-mail Address">
+            <button>Get Started</button>
+          </div>
+          <div class="two--column__customers">
+            <p>Our TRUSTED Customers</p>
+            <img src="./assets/customers-logo-strip.png" alt="" class="customers__png">
+          </div>
+          <div class="two--column__right">
+            <div class="illustration__container">
+              <img src="./assets/design-illustration.svg" alt="" class="ill__svg">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
