round two with trying to replicate this site. Got the navigation bar complete.

--- a/index.html
+++ b/index.html
@@ -2,60 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Document</title>
+  <link rel="stylesheet" href="./styles.css">
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div id="root">
-    <div class="app">
-      <div>
-        <section>
-          <header class="light__header">
-            <div class="nav__container">
-              <a href="#" class="nav__link--logo">
-                <img class="logo" src="./assets/logo.svg">
-                Treact
-              </a>
-              <div class="nav__links">
-                <ul>
-                  <il><a href="#" class="nav__link">About</a></il>
+  <section id="landing">
+    <div class="container">
+      <div class="row">
+        <nav>
+          <div class="nav__container">
+            <a href="/" class="nav__link--logo">
+              <img class="logo" src="./assets/logo.svg">
+              Treact
+            </a>
+              <ul class="nav__links">
+                <il><a href="#" class="nav__link">About</a></il>
                 <il><a href="#" class="nav__link">Blog</a></il>
                 <il><a href="#" class="nav__link">Pricing</a></il>
-                <il><a href="#" class="nav__link">Contacts</a></il>
+                <il><a href="#" class="nav__link">Contact Us</a></il>
                 <il><a href="#" class="nav__link">Login</a></il>
                 <il><a href="#" class="nav__link--primary">Sign Up</a></il>
                 </ul>
               </div>
-            </div>
-          </header>
-        </section>
-      </div>
-      <div class="two--column__container">
-        <div class="two--column__input">
-          <div class="two--column__left">
-            <h1>
-              Beautiful React Templates <span class="purple">for you.</span>
-            </h1>
-            <p class="left--column__para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
-            <input type="text" placeholder="Your E-mail Address">
-            <button>Get Started</button>
-          </div>
-          <div class="two--column__customers">
-            <p>Our TRUSTED Customers</p>
-            <img src="./assets/customers-logo-strip.png" alt="" class="customers__png">
-          </div>
-          <div class="two--column__right">
-            <div class="illustration__container">
-              <img src="./assets/design-illustration.svg" alt="" class="ill__svg">
-            </div>
-          </div>
-        </div>
+          </nav>
       </div>
     </div>
-  </div>
+  </section>
 </body>
 </html>
