started over for the 3rd or 4th time. Finally got the landing page complete.

--- a/index.html
+++ b/index.html
@@ -3,33 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./styles.css">
-  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+  <title>JamekaH Treact</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <section id="landing">
-    <div class="container">
-      <div class="row">
-        <nav>
-          <div class="nav__container">
-            <a href="/" class="nav__link--logo">
-              <img class="logo" src="./assets/logo.svg">
-              Treact
-            </a>
-              <ul class="nav__links">
-                <il><a href="#" class="nav__link">About</a></il>
-                <il><a href="#" class="nav__link">Blog</a></il>
-                <il><a href="#" class="nav__link">Pricing</a></il>
-                <il><a href="#" class="nav__link">Contact Us</a></il>
-                <il><a href="#" class="nav__link">Login</a></il>
-                <il><a href="#" class="nav__link--primary">Sign Up</a></il>
-                </ul>
-              </div>
-          </nav>
-      </div>
+  <section id="nav" class="nav__container">
+    <div class="row">
+      <nav class="nav">
+        <a class="navi__logo" href="/">
+          <figure class="navi__logo--img--wrapper">
+            <img src="./assets/logo.svg" class="navi__logo--img" alt="" />
+          </figure>
+          <h2 class="logo--title">Treact</h2>
+        </a>
+
+        <ul class="nav__links">
+          <il><a href="#" class="nav__link">About</a></il>
+          <il><a href="#" class="nav__link">Blog</a></il>
+          <il><a href="#" class="nav__link">Pricing</a></il>
+          <il><a href="#" class="nav__link">Contact Us</a></il>
+          <il><a href="#" class="nav__link">Login</a></il>
+          <il><a href="/" class="nav__link--primary">Sign Up</a></il>
+        </ul>
+      </nav>
+      <header>
+        <div class="header__container">
+          <div class="header__info">
+            <h1 class="header__title">Beautiful React Templates <span class="purple">for you.</span></h1>
+            <p class="header--para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+            <div class="header__form">
+              <form action="" class="form">
+                <div class="input">
+                  <input type="email" placeholder="You E-mail Address">
+                  <button type="submit" class="header--button">Get Started</button>
+                </div>
+              </form>
+            </div>
+            <div class="header__customers--info">
+              Our Trusted Customers
+              <figure class="customers__logo--wrapper">
+                <img src="./assets/customers-logo-strip.png" class="customers--logo__pic" />
+              </figure>
+            </div>
+          </div>
+          <figure class="header__img--wrapper">
+            <img src="./assets/design-illustration.svg" class="header__img" />
+      
+          </figure>
+        </div>
+      </header>
     </div>
   </section>
+  <main>
+    <section id="#main" class="main__container">
+      <div class="row">
+        <div class="features--container">
+          <div class="features--info">
+            <h5 class="purple">Features</h5>
+            <h2 class="features--info__heading">We have an Amazing <span class="purple">Service</span></h2>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
