working on the features portion of the site

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <div class="header__info">
             <h1 class="header__title">Beautiful React Templates <span class="purple">for you.</span></h1>
             <p class="header--para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
-            <div class="header__form">
-              <form action="" class="form">
+            <div class="header__form--bg">
+              <form action="" class="header__form">
                 <div class="input">
-                  <input type="email" placeholder="You E-mail Address">
+                  <input type="email" placeholder="Your E-mail Address" class="header__input">
                   <button type="submit" class="header--button">Get Started</button>
                 </div>
               </form>
@@ -61,8 +61,66 @@
         <div class="features--container">
           <div class="features--info">
             <h5 class="purple">Features</h5>
-            <h2 class="features--info__heading">We have an Amazing <span class="purple">Service</span></h2>
+            <h2 class="features--info__heading">We have Amazing <span class="purple">Service</span></h2>
+            <p class="features--info__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae iure, quis maiores veritatis aliquid modi necessitatibus! Nisi praesentium eveniet cupiditate.</p>
           </div>
+
+          <ul class="services--list">
+            <li class="service--wrapper">
+              <figure class="service__img--wrapper">
+                <img src="./assets/shield-icon.svg" alt="" class="service__img">
+              </figure>
+              <div class="service--content">
+                <h1 class="service__title">Secure</h1>
+                <p class="service__para">We strictly only deal with vendors that provide top notch security.</p>
+              </div>
+            </li>
+            <li class="service--wrapper">
+              <figure class="service__img--wrapper">
+                <img src="./assets/support-icon.svg" alt="" class="service__img">
+              </figure>
+              <div class="service--content">
+                <h1 class="service__title">24/7 Support</h1>
+                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              </div>
+            </li>
+            <li class="service--wrapper">
+              <figure class="service__img--wrapper">
+                <img src="./assets/customize-icon.svg" alt="" class="service__img">
+              </figure>
+              <div class="service--content">
+                <h1 class="service__title">Customizable</h1>
+                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              </div>
+            </li>
+            <li class="service--wrapper">
+              <figure class="service__img--wrapper">
+                <img src="./assets/reliable-icon.svg" alt="" class="service__img">
+              </figure>
+              <div class="service--content">
+                <h1 class="service__title">Reliable</h1>
+                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              </div>
+            </li>
+            <li class="service--wrapper">
+              <figure class="service__img--wrapper">
+                <img src="./assets/fast-icon.svg" alt="" class="service__img">
+              </figure>
+              <div class="service--content">
+                <h1 class="service__title">Fast</h1>
+                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              </div>
+            </li>
+            <li class="service--wrapper">
+              <figure class="service__img--wrapper">
+                <img src="./assets/simple-icon.svg" alt="" class="service__img">
+              </figure>
+              <div class="service--content">
+                <h1 class="service__title">Easy</h1>
+                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
