add Quality portion of the site. Tweaked previous sections as well

--- a/index.html
+++ b/index.html
@@ -62,65 +62,82 @@
           <div class="features--info">
             <h5 class="purple">Features</h5>
             <h2 class="features--info__heading">We have Amazing <span class="purple">Service</span></h2>
-            <p class="features--info__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae iure, quis maiores veritatis aliquid modi necessitatibus! Nisi praesentium eveniet cupiditate.</p>
+            <p class="features--info__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-
-          <ul class="services--list">
-            <li class="service--wrapper">
-              <figure class="service__img--wrapper">
-                <img src="./assets/shield-icon.svg" alt="" class="service__img">
-              </figure>
-              <div class="service--content">
-                <h1 class="service__title">Secure</h1>
-                <p class="service__para">We strictly only deal with vendors that provide top notch security.</p>
+            
+            <div class="services--list">
+              <div class="service--wrapper">
+                <figure class="service__img--wrapper">
+                  <img src="./assets/shield-icon.svg" alt="" class="service__img">
+                </figure>
+                <div class="service--content">
+                  <h1 class="service__title">Secure</h1>
+                  <p class="service__para">We strictly only deal with vendors that provide top notch security.</p>
+                </div>
               </div>
-            </li>
-            <li class="service--wrapper">
-              <figure class="service__img--wrapper">
-                <img src="./assets/support-icon.svg" alt="" class="service__img">
-              </figure>
-              <div class="service--content">
-                <h1 class="service__title">24/7 Support</h1>
-                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              <div class="service--wrapper">
+                <figure class="service__img--wrapper">
+                  <img src="./assets/support-icon.svg" alt="" class="service__img">
+                </figure>
+                <div class="service--content">
+                  <h1 class="service__title">24/7 Support</h1>
+                  <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                </div>
               </div>
-            </li>
-            <li class="service--wrapper">
-              <figure class="service__img--wrapper">
-                <img src="./assets/customize-icon.svg" alt="" class="service__img">
-              </figure>
-              <div class="service--content">
-                <h1 class="service__title">Customizable</h1>
-                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              <div class="service--wrapper">
+                <figure class="service__img--wrapper">
+                  <img src="./assets/customize-icon.svg" alt="" class="service__img">
+                </figure>
+                <div class="service--content">
+                  <h1 class="service__title">Customizable</h1>
+                  <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                </div>
               </div>
-            </li>
-            <li class="service--wrapper">
-              <figure class="service__img--wrapper">
-                <img src="./assets/reliable-icon.svg" alt="" class="service__img">
-              </figure>
-              <div class="service--content">
-                <h1 class="service__title">Reliable</h1>
-                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              <div class="service--wrapper">
+                <figure class="service__img--wrapper">
+                  <img src="./assets/reliable-icon.svg" alt="" class="service__img">
+                </figure>
+                <div class="service--content">
+                  <h1 class="service__title">Reliable</h1>
+                  <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                </div>
               </div>
-            </li>
-            <li class="service--wrapper">
-              <figure class="service__img--wrapper">
-                <img src="./assets/fast-icon.svg" alt="" class="service__img">
-              </figure>
-              <div class="service--content">
-                <h1 class="service__title">Fast</h1>
-                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              <div class="service--wrapper">
+                <figure class="service__img--wrapper">
+                  <img src="./assets/fast-icon.svg" alt="" class="service__img">
+                </figure>
+                <div class="service--content">
+                  <h1 class="service__title">Fast</h1>
+                  <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                </div>
               </div>
-            </li>
-            <li class="service--wrapper">
-              <figure class="service__img--wrapper">
-                <img src="./assets/simple-icon.svg" alt="" class="service__img">
-              </figure>
-              <div class="service--content">
-                <h1 class="service__title">Easy</h1>
-                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+              <div class="service--wrapper">
+                <figure class="service__img--wrapper">
+                  <img src="./assets/simple-icon.svg" alt="" class="service__img">
+                </figure>
+                <div class="service--content">
+                  <h1 class="service__title">Easy</h1>
+                  <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                </div>
               </div>
-            </li>
-          </ul>
+            </div>
+        </div>
+      </div>
+    </section>
+    <section id="quality">
+      <div class="quality__container">
+        <div class="row quality__row">
+          <div class="quality__description">
+            <h5 class="purple">QUALITY WORK</h5>
+            <h1 class="quality__title">Designed & Developed by <span class="purple">Professionals.</span></h1>
+            <p class="quality__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <a class="quality__button--wrapper" href="#">
+              <button class="quality__button button__hover">Learn More</button>
+            </a>
+          </div>
+          <figure class="quality__img--wrapper">
+            <img src="./assets/hero-screenshot.png" alt="" class="quality__img">
+          </figure>
         </div>
       </div>
     </section>
