Added a couple more sections to the site today.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JamekaH Treact</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -266,10 +267,105 @@
                   eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                   enim ad minim veniam, quis nostrud exercitation ullamco laboris
                   nisi ut aliquip ex ea commodo consequat.</p>
-                  
+                <div class="values__small--info">
+                  <div class="values__small--container">
+                    <div class="values__small--wrapper">
+                      <figure class="values__small--img--wrapper">
+                        <i class="fas fa-dollar-sign"></i>
+                      </figure>
+                      <h2 class="values__small--title">Affordable</h2>
+                    </div>
+                    <p class="values__small--para">We promise to offer you the best rate we can - at par with the industry standard.</p>
+                  </div>
+
+                  <div class="values__small--container">
+                    <div class="values__small--wrapper">
+                      <figure class="values__small--img--wrapper">
+                        <i class="fas fa-suitcase"></i>
+                      </figure>
+                      <h2 class="values__small--title">Professionalism</h2>
+                    </div>
+                    <p class="values__small--para">We assure you that our templates are designed and created by
+                      professional designers.</p>
+                  </div>
+                </div> 
+                <a href=""  class="values__info--link">Learn More</a>
               </div>
+              <figure class="values__img--wrapper">
+                <img src="./assets/prototype-illustration.svg" class="values__img" />
+              </figure>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section id="pricing">
+        <div class="pricing--container">
+          <div class="row">
+            <div class="pricing__info">
+              <h5 class="purple">Pricing</h5>
+              <h2 class="pricing__info--title">Reasonable & Affordable</h2>
+              <p class="pricing__info--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </div>
+        <div class="pricing__list">
+          <div class="price__container">
+            <div class="price--wrapper">
+              <h3 class="price__subtitle">Personal</h3>
+              <h2 class="price__title">$17.99</h2>
+              <h3 class="price__monthly">Monthly</h3>
+            </div>
+            <div class="price--wrapper">
+              <h3 class="prices__main">For Individuals</h3>
+              <p class="feature">30 Templates</p>
+              <p class="feature">7 Landing Pages</p>
+              <p class="feature">12 Internal Pages</p>
+              <p class="feature">Basic Assistance</p>
+            </div>
+            <div class="price--wrapper">
+              <a href="" class="price__btn1">Buy Now</a>
+            </div>
+          </div>
+          
+          <div class="price__container purple--bg">
+            <div class="price--wrapper border">
+              <h3 class="price__subtitle text--white">Business</h3>
+              <h2 class="price__title text--white">$37.99</h2>
+              <h3 class="price__monthly text--white">Monthly</h3>
+            </div>
+            <div class="price--wrapper border">
+              <h3 class="prices__main text--white">For Small Businesses</h3>
+              <p class="feature text--white">60 Templates</p>
+              <p class="feature text--white">15 Landing Pages</p>
+              <p class="feature text--white">22 Internal Pages</p>
+              <p class="feature text--white">Priority Assistance</p>
+            </div>
+            <div class="price--wrapper border">
+              <a href="" class="price__btn2">Buy Now</a>
+            </div>
+          </div>
+
+          <div class="price__container">
+            <div class="price--wrapper">
+              <h3 class="price__subtitle">Enterprise</h3>
+              <h2 class="price__title">$57.99</h2>
+              <h3 class="price__monthly">Monthly</h3>
+            </div>
+            <div class="price--wrapper">
+              <h3 class="prices__main">For Large Companies</h3>
+              <p class="feature">90 Templates</p>
+              <p class="feature">27 Landing Pages</p>
+              <p class="feature">37 Internal Pages</p>
+              <p class="feature">Personal Assistance</p>
+            </div>
+            <div class="price--wrapper">
+              <a href="" class="price__btn3">Buy Now</a>
+            </div>
+          </div>
+
+
         </div>
       </section>
     </main>
