added the last bit of the site.

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <a href="" class="price__btn1">Buy Now</a>
               </div>
             </div>
-            
+
             <div class="price__container purple--bg">
               <div class="price--wrapper border">
                 <h3 class="price__subtitle text--white">Business</h3>
@@ -372,7 +372,7 @@
                 <a href="" class="price__btn2">Buy Now</a>
               </div>
             </div>
-            
+
             <div class="price__container">
               <div class="price--wrapper">
                 <h3 class="price__subtitle">Enterprise</h3>
@@ -398,10 +398,7 @@
         <div class="row">
           <div class="testimonials--wrapper">
             <figure class="test__img--wrapper">
-              <img
-                src="assets/love-illustration.svg"
-                class="test__img"
-              />
+              <img src="assets/love-illustration.svg" class="test__img" />
             </figure>
 
             <div class="testimonials__info">
@@ -416,15 +413,13 @@
                 ad minim veniam.
               </p>
               <figure class="test__star-img--wrapper">
-               <i class="fas fa-star star"></i>
-               <i class="fas fa-star star"></i>
-               <i class="fas fa-star star"></i>
-               <i class="fas fa-star star"></i>
-               <i class="fas fa-star star"></i>
+                <i class="fas fa-star star"></i>
+                <i class="fas fa-star star"></i>
+                <i class="fas fa-star star"></i>
+                <i class="fas fa-star star"></i>
+                <i class="fas fa-star star"></i>
               </figure>
-              <h5 class="testimonial--title2">
-                Amazing User Experience
-              </h5>
+              <h5 class="testimonial--title2">Amazing User Experience</h5>
               <p class="test__info--para2">
                 Duis aute dolor, sit amet consectetur adipisicing elit. Deleniti
                 molestias ducimus dolore unde consectetur quo obcaecati, ullam
@@ -441,18 +436,123 @@
                   />
                 </figure>
                 <div class="customer__title--wrapper">
-                  <h5 class="customer__title--name">
-                    Charlotte Hale
-                  </h5>
-                  <h3 class="customer__title">
-                    Director, Delos Inc.
-                  </h3>
+                  <h5 class="customer__title--name">Charlotte Hale</h5>
+                  <h3 class="customer__title">Director, Delos Inc.</h3>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <section id="get--started" class="started__container">
+        <div class="get--started__row">
+          <div class="background--container">
+            <h5 class="getstarted__text text--white">
+              Developers all over the world are happily using Treact.
+            </h5>
+            <div class="getstarted__links">
+              <a href="/" class="link--1 text--white">Get Started</a>
+              <a href="#" class="link--2 text--white">Contact Us</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <div class="footer__container">
+        <div class="footer__row">
+          <div class="footer__nav">
+            <div class="footer__nav--section">
+              <h3 class="footer__title">Main</h3>
+              <li class="footer__list">
+                <a class="footer__link" href="">Blog</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">FAQs</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Support</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">About Us</a>
+              </li>
+            </div>
+            <div class="footer__nav--section">
+              <h3 class="footer__title">Product</h3>
+              <li class="footer__list">
+                <a class="footer__link" href="">Log In</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Personal</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Business</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Team</a>
+              </li>
+            </div>
+            <div class="footer__nav--section">
+              <h3 class="footer__title">Press</h3>
+              <li class="footer__list">
+                <a class="footer__link" href="">Logos</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Events</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Stories</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Office</a>
+              </li>
+            </div>
+            <div class="footer__nav--section">
+              <h3 class="footer__title">Team</h3>
+              <li class="footer__list">
+                <a class="footer__link" href="">Career</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Founders</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Culture</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Onboarding</a>
+              </li>
+            </div>
+            <div class="footer__nav--section">
+              <h3 class="footer__title">Legal</h3>
+              <li class="footer__list">
+                <a class="footer__link" href="">GDPR</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Privacy Policy</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Terms of Service</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="">Disclaimer</a>
+              </li>
+            </div>
+          </div>
+          <div class="footer__links">
+            <div class="footer__logo--wrapper">
+              <img class="footer__logo" src="./assets/logo-light.svg" />
+              <h2>Treact</h2>
+            </div>
+            <h3>© 2018 Treact Inc. All Rights Reserved.</h3>
+            <div class="socials--wrapper">
+              <i class="fab fa-facebook social--links"></i>
+              <i class="fab fa-twitter social--links"></i>
+              <i class="fab fa-youtube social--links"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
