Made some changes with the footer

--- a/index.html
+++ b/index.html
@@ -542,9 +542,9 @@
           <div class="footer__links">
             <div class="footer__logo--wrapper">
               <img class="footer__logo" src="./assets/logo-light.svg" />
-              <h2>Treact</h2>
+              <h2 class="text--logo">Treact inc.</h2>
             </div>
-            <h3>© 2018 Treact Inc. All Rights Reserved.</h3>
+            <h3 class="copyright--text">© 2018 Treact Inc. All Rights Reserved.</h3>
             <div class="socials--wrapper">
               <i class="fab fa-facebook social--links"></i>
               <i class="fab fa-twitter social--links"></i>
