taking the feedback into consideration, I have used this time to adjust the padding and work on the responsiveness of the site while on mobile devices

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <il><a href="#" class="nav__link">Login</a></il>
             <il><a href="/" class="nav__link--primary">Sign Up</a></il>
           </ul>
+          <button class="btn__menu">
+            <i class="fas fa-bars"></i>
+          </button>
         </nav>
         <header>
           <div class="header__container">
