redid the rectangle before the footer, and changed sizing with pricing columns.

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                 <div class="values__small--info">
                   <div class="values__small--container">
                     <div class="values__small--wrapper">
-                      <figure class="values__small--img--wrapper">
-                        <i class="fas fa-dollar-sign"></i>
+                      <figure class="values__small--img--wrapper1">
+                        <i class="fas fa-dollar-sign fa-lg"></i>
                       </figure>
                       <h2 class="values__small--title">Affordable</h2>
                     </div>
@@ -303,8 +303,8 @@
 
                   <div class="values__small--container">
                     <div class="values__small--wrapper">
-                      <figure class="values__small--img--wrapper">
-                        <i class="fas fa-suitcase"></i>
+                      <figure class="values__small--img--wrapper2">
+                        <i class="fas fa-suitcase fa-lg"></i>
                       </figure>
                       <h2 class="values__small--title">Professionalism</h2>
                     </div>
@@ -447,15 +447,18 @@
           </div>
         </div>
       </section>
-      <section id="get--started" class="started__container">
-        <div class="get--started__row">
-          <div class="background--container">
-            <h5 class="getstarted__text text--white">
-              Developers all over the world are happily using Treact.
-            </h5>
-            <div class="getstarted__links">
-              <a href="/" class="link--1 text--white">Get Started</a>
-              <a href="#" class="link--2 text--white">Contact Us</a>
+
+      <section id="getstarted" class="gs__styledcontainer">
+        <div class="gs__border">
+          <div class="gs__primarycontainer">
+            <div class="gs__row">
+              <div class="gs__text--container">
+                <h5 class="gs__text text--white">Developers all over the world are happily using Treact</h5>
+              </div>
+              <div class="gs__link--container">
+                <a href="/" class="gs__btn">Get Started</a>
+                <a href="/" class="cs__btn">Contact Us</a>
+              </div>
             </div>
           </div>
         </div>
@@ -547,7 +550,9 @@
               <img class="footer__logo" src="./assets/logo-light.svg" />
               <h2 class="text--logo">Treact inc.</h2>
             </div>
-            <h3 class="copyright--text">© 2018 Treact Inc. All Rights Reserved.</h3>
+            <h3 class="copyright--text">
+              © 2018 Treact Inc. All Rights Reserved.
+            </h3>
             <div class="socials--wrapper">
               <i class="fab fa-facebook social--links"></i>
               <i class="fab fa-twitter social--links"></i>
